--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,13 @@
       name="description"
       content="Web site created using create-react-app to pull data from the TMDB API"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>TMDB Search</title>
+    <title>MovieWiki</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
